PN-3117 remove unused imports